# rust-microservice

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile-alpine  Dockerfile-scratch  README.md  rustfmt.toml  sonar-project.properties
.cicd/: execute-build.sh  execute-tests.sh
.github/actions/check-tag/: action.yml
.github/actions/rust-env/: action.yml
.github/workflows/: pipeline.yaml  rust-build-publish-macro-crate.yaml  rust-build.yaml  rust-deploy.yaml  rust-publish-crate.yaml  rust-release.yaml  rust-test.yaml
assets/: custom-config.yaml
assets/tests/: bigquery-test-data.yaml  realm-export-users.json  test-config.yaml
etc/: README.md  docker-compose-gitlab.yaml
etc/.api-initdb/: 01_database.sql
etc/gitlab/: README.md
etc/gitlab/image-builder/: builder.yml
etc/gitlab/rust-base-image-builder/: README.md
etc/gitlab/ssl/: README.md  gitlab.server.crt  gitlab.server.csr  gitlab.server.key
etc/k3d/: README.md  letsencrypt-dev.yaml  nginx-ingress-test.yaml  registries.yaml
etc/telemetry/grafana/datasources/: datasources.yaml
etc/telemetry/prometheus/: prometheus.yaml
examples/server/: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-alpine  Dockerfile-scratch  README.md  sonar-project.properties
examples/server/.cicd/: execute-build.sh  execute-deploy.sh
examples/server/assets/: custom-config.yaml
examples/server/assets/tests/: realm-export.json
examples/server/etc/: docker-compose.yaml  realm-export.json
examples/server/etc/.api-initdb/: 02_user.sql
examples/server/etc/.initdb/: 01_database.sql
examples/server/etc/gitlab/gitlab-runner/runner/config/: config.toml
examples/server/etc/gitlab/image-builder/: README.md
examples/server/etc/gitlab/rust-base-image-builder/: .gitlab-ci.yml  Dockerfile
examples/server/etc/gitlab/ssl/: ca.key  ca.pem  ca.srl  extfile.cnf
examples/server/etc/telemetry/grafana/dashboards/: rust-rest-api.json
examples/server/etc/telemetry/grafana/provisioning/: dashboards.yaml
examples/server/k8s/: apply.sh  deployment.yaml
examples/server/src/: lib.rs  main.rs
examples/server/src/dto/: user.rs
examples/server/src/module/user/: mod.rs  user_controller.rs  user_repository.rs  user_service.rs
examples/server/tests/: mod.rs
examples/server/tests/module/: user_integration_test.rs
k8s/: deployment.yaml
microservice/: Cargo.toml  README.md
microservice/assets/: config.yaml
microservice/server-macros/src/: lib.rs
microservice/src/: lib.rs  metrics.rs  security.rs  server.rs  test.rs
microservice/src/cmd/: root.rs  run.rs  style.rs
microservice/src/data/: bigquery.rs  database.rs  mod.rs
microservice/src/http/: health.rs  web.rs
rust-microservice-macros/: .gitignore  Cargo.toml  README.md
rust-microservice-macros/src/: lib.rs
server-macros/: Cargo.toml  README.md
server-macros/src/: lib.rs
src/: lib.rs  main.rs  metrics.rs  security.rs  server.rs  settings.rs  test.rs
src/cmd/: mod.rs  root.rs  run.rs
src/data/: bigquery.rs  mod.rs
src/dto/: mod.rs
src/entity/: user.rs
src/http/: health.rs  mod.rs  web.rs
src/module/user/: user_controller.rs  user_repository.rs
tests/: mod.rs
tests/module/: mod.rs
